tests/spec/compile-pass/084_float_literals.zn
// category: compile-pass
// stage: mvp
// milestone: M2
// purpose: float literals flow through F32/F64 initializers, fields, calls, comparisons, and returns

module tests.pass.floatLiterals;

struct Point {
    x: F32,
    y: F64,
}

fn accept(value: F64) -> F64 {
    return value;
}

fn main() -> F64 {
    val x: F32 = 1.0;
    var point: Point = Point { x: x, y: 2.5 };
    point.y = accept(3.25);
    if point.y > 1.0 {
        return point.y;
    }
    return 0.5;
}
