tests/spec/compile-fail/185_float_literal_type_mismatch.zn
// category: compile-fail
// stage: mvp
// milestone: M2
// purpose: float literals participate in simple type mismatch diagnostics

module tests.fail.floatLiteralTypeMismatch;

struct Point {
    x: F32,
}

fn needCount(value: U32) -> U32 {
    return value;
}

fn badFloatLiterals() -> Bool {
    val count: U32 = 1.5; // expected-error[E0302]: initializer type U32 does not match float expression
    var flag: Bool = 2.5; // expected-error[E0302]: initializer type Bool does not match float expression
    var point: Point = Point { x: 1.0 };
    point.x = true; // expected-error[E0302]: field assignment x type F32 does not match Bool expression
    val badField = Point { x: false }; // expected-error[E0302]: field x type F32 does not match Bool expression
    val badArg = needCount(3.5); // expected-error[E0302]: argument 1 of needCount expects U32 but got float expression
    if 4.5 { // expected-error[E0302]: if condition must be Bool, got float expression
        return false;
    }
    return 5.5; // expected-error[E0302]: return type Bool does not match float expression
}
